--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <div class="container photo-sector">
                 <h2 class="services-heading">Чим ми займаємося</h2>
                 <div class="services-images">
-                    <img src="./images/work-photo1.png" alt="Photo" class="services__image">
-                    <img src="./images/work-photo2.png" alt="Photo" class="services__image">
-                    <img src="./images/work-photo3.png" alt="Photo" class="services__image">
+                    <img src="./images/work-photo1.jpg" alt="Photo" class="services__image">
+                    <img src="./images/work-photo2.jpg" alt="Photo" class="services__image">
+                    <img src="./images/work-photo3.jpg" alt="Photo" class="services__image">
                 </div>
             </div>
         </section>
