--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link">
                         Студия
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link" id="5463">
                         Портфолиум
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link" id="5464">
                         Контакты
                     </a>
                 </nav>
@@ -56,24 +56,40 @@
         <section class="features">
             <div class="container text-sector">
                 <div class="feature">
-                    <div class="text-img1"></div>
+                    <div class="text-img1">
+                        <svg width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-antenna-1-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="feature-description">Ідейні міркування, і навіть початок повсякденної роботи з формування
                         позиції.</p>
                 </div>
                 <div class="feature">
-                    <div class="text-img2"></div>
+                    <div class="text-img1">
+                        <svg width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-clock-1-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="feature-description">Завдання організації, особливо рамки і місце навчання кадрів тягне у
                         себе.</p>
                 </div>
                 <div class="feature">
-                    <div class="text-img3"></div>
+                    <div class="text-img3">
+                        <svg width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-diagram-1-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feature-title">ПЛАНУВАННЯ</h3>
                     <p class="feature-description">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </div>
                 <div class="feature">
-                    <div class="text-img4"></div>
+                    <div class="text-img4">
+                        <svg width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-astronaut-1-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="feature-description">Значимість цих проблем настільки очевидна, що реалізація планових
                         завдань.</p>
@@ -85,8 +101,11 @@
                 <h2 class="services-heading">Чим ми займаємося</h2>
                 <div class="services-images">
                     <img src="./images/work-photo1.jpg" alt="Photo" class="services__image">
+                    <p class="service-text1">Десктопні додатки</p>
                     <img src="./images/work-photo2.jpg" alt="Photo" class="services__image">
+                    <p class="service-text2">Мобільні додатки</p>
                     <img src="./images/work-photo3.jpg" alt="Photo" class="services__image">
+                    <p class="service-text3">Дизайнерські рішення</p>
                 </div>
             </div>
         </section>
@@ -99,6 +118,28 @@
                         <div class="text-members">
                             <h4 class="team-name">Ігор Дем'яненко</h4>
                             <p class="team-role">Product Designer</p>
+                            <div class="contact">
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-1"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-2"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-3"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-4"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="team__member">
@@ -106,6 +147,28 @@
                         <div class="text-members">
                             <h4 class="team-name">Ольга Рєпіна</h4>
                             <p class="team-role">Frontend Developer</p>
+                            <div class="contact">
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-1"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-2"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-3"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-4"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="team__member">
@@ -113,6 +176,28 @@
                         <div class="text-members">
                             <h4 class="team-name">Микола Тарасов</h4>
                             <p class="team-role">Marketing</p>
+                            <div class="contact">
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-1"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-2"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-3"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-4"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="team__member">
@@ -120,7 +205,66 @@
                         <div class="text-members">
                             <h4 class="team-name">Михайло Єрмаков</h4>
                             <p class="team-role">UI Designer</p>
+                            <div class="contact">
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-1"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-2"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-3"></use>
+                                    </svg>
+                                </div>
+                                <div class="more-details">
+                                    <svg class="team-contacts" width="20px" height="20px">
+                                        <use href="./images/symbol-defs.svg#icon-symbol-4"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container clients-sector">
+                <h2 class="client-text">Постійні клієнти</h2>
+                <div class="clients">
+                    <div class="client">
+                        <svg class="img-clients" width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-group-6"></use>
+                        </svg>
+                    </div>
+                    <div class="client">
+                        <svg class="img-clients" width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-group-1-1"></use>
+                        </svg>
+                    </div>
+                    <div class="client">
+                        <svg class="img-clients" width="43" height="41">
+                            <use href="./images/symbol-defs.svg#icon-group-2-1"></use>
+                        </svg>
+                    </div>
+                    <div class="client">
+                        <svg class="img-clients" width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-group-3-1"></use>
+                        </svg>
+                    </div>
+                    <div class="client">
+                        <svg class="img-clients" width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-group-4-1"></use>
+                        </svg>
+                    </div>
+                    <div class="client">
+                        <svg class="img-clients" width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-group-5-1"></use>
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -128,20 +272,47 @@
     </main>
     <footer class="footer">
         <div class="container footer-sector">
-            <div class="footer-sag">
-                <a href="http://" target="_blank" rel="noopener noreferrer" class="footer-link">
-                    <span class="footer-name glov-infa">Web</span>Studio
-                </a>
-                <p class="footer-info">м. Київ, пр-т Лесі Українки, 26</p>
+            <div class="own-fot">
+                <div class="footer-sag">
+                    <a href="http://" target="_blank" rel="noopener noreferrer" class="footer-link">
+                        <span class="footer-name glov-infa">Web</span>Studio
+                    </a>
+                    <p class="footer-info">м. Київ, пр-т Лесі Українки, 26</p>
+                </div>
+                <address class="footer-contact-info">
+                    <a href="mailto:info@devstudio.com" class="footer-email">
+                        info@devstudio.com
+                    </a>
+                    <a href="tel:+380961111111" class="footer-phone">
+                        +380 96 111 11 11
+                    </a>
+                </address>
             </div>
-            <address class="footer-contact-info">
-                <a href="mailto:info@devstudio.com" class="footer-email">
-                    info@devstudio.com
-                </a>
-                <a href="tel:+380961111111" class="footer-phone">
-                    +380 96 111 11 11
-                </a>
-            </address>
+            <div class="contact-footer">
+                <p class="footer-text">приєднуйтесь</p>
+                <div class="contact-cha">
+                    <div class="contact-elp">
+                        <svg class="footer-img" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </div>
+                    <div class="contact-elp">
+                        <svg class="footer-img" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </div>
+                    <div class="contact-elp">
+                        <svg class="footer-img" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </div>
+                    <div class="contact-elp">
+                        <svg class="footer-img" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
