--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link">
                         Студия
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link" id="5463">
+                    <a href="/portfolio/portfolio.html" target="_blank" rel="noopener noreferrer" class="navigation-link" id="5463">
                         Портфолиум
                     </a>
                     <a href="http://" target="_blank" rel="noopener noreferrer" class="navigation-link" id="5464">
